Miss Muffet's story

--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 
 <html>
     <head>
-        <title>My Website</title>
+        <title>Miss Muffet</title>
     </head>
     
     <body>
-        <h1>Reed Smith</h1>
-        <p></p>
+        <h1>A story about Miss Muffet</h1>
+        <p>There once was a lady who lived on a tuffet. Her name was Miss Muffet. She resided in the valley, but who knows what was up her alley. She had two or three cats but that was expected because she lived on a tuffet in the middle of Connecticut. Although she was crazy, that Miss Muffet was anything but lazy. She worked in a law firm with all the white men, but she refused to conform to their dull expectations. She wrote every note in bright purple ink, with a pen that was bedazzled in every shade of pink. With a flower in her hair and pineapples on her socks, Miss Muffet was professional but knew how to rock. She was a quiet gal working especially hard, but when the work day was over that quiet demeanor was barred. She rocked and rolled till the cows came home, but then she got up the next day with a headache in her dome. Don't worry about ole Miss Muffet, shes half way across town with her two or three cats and a brand new tuffet.</p>
+        <img src="images/Connecticut.jpg" width="300" height="250">
     </body>
 </html>
